# infixconv

./: .gitignore  CMakeLists.txt  README.md  parseinfix.c  parseinfix.h  stack.c  stack.h
stack-like/: CMakeLists.txt  stack.h
test/: CMakeLists.txt
test/tests/: TEST-stack.c
